feat: Implement Welcome, Sign Up, and Sign In screens
This commit introduces the initial UI and basic structure for the Welcome, Sign Up, and Sign In screens of the Bookitlist application.

Key additions:

**Layouts:**
- `app/src/main/res/layout/activity_welcome.xml`: Defines the layout for the welcome screen, including logo, title, subtitle, and buttons for Sign In and Sign Up.
- `app/src/main/res/layout/signup_activity.xml`: Defines the layout for the user registration screen with fields for full name, username, email, phone, password, confirm password, and a terms & conditions link.
- `app/src/main/res/layout/signin_activity.xml`: Defines the layout for the user login screen with fields for phone number, password, forgot password link, and social login options (Google, Facebook, Apple).

**Activities:**
- `app/src/main/java/com/app/bookitlist/WelcomeActivity.kt`: Basic class for the Welcome screen (currently empty).
- `app/src/main/java/com/app/bookitlist/SignupActivity.kt`: Implements the Sign Up screen, initializes UI elements using ViewBinding.
- `app/src/main/java/com/app/bookitlist/SigninActivity.kt`: Implements the Sign In screen, initializes UI elements using ViewBinding.

**Resources:**
- **Drawables:**
    - `app/src/main/res/drawable/app_bg.webp`: Background image for screens.
    - `app/src/main/res/drawable/bookitlist_logo.png`: Application logo.
    - `app/src/main/res/drawable/edit_text_bg.xml`: Custom background for EditText fields.
    - `app/src/main/res/drawable/apple_icon.png`, `app/src/main/res/drawable/fb_icon.png`, `app/src/main/res/drawable/google_icon.png`: Icons for social login.
    - `app/src/main/res/drawable/cross_icon.svg`: A cross icon.
- **Fonts:**
    - Added Roboto font variations (Bold, Medium, Regular, SemiBold) in `app/src/main/res/font/`.
    - `app/src/main/res/font/roboto_font_family.xml`: Defines the Roboto font family.
- **Values:**
    - `app/src/main/res/values/colors.xml`: Added new color definitions for UI elements (p

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,6 +10,25 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.Bookitlist" />
+        android:theme="@style/Theme.Bookitlist">
+
+        <activity
+            android:name=".WelcomeActivity"
+            android:exported="true">  <!-- Must be true for launcher activity -->
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
+
+        <activity
+            android:name=".SignupActivity"
+            android:exported="false" />
+
+        <activity
+            android:name=".SigninActivity"
+            android:exported="false" />
+
+    </application>
 
 </manifest>
