--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,9 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
 
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+
     <application
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
@@ -13,7 +16,7 @@
         android:theme="@style/Theme.Bookitlist">
 
         <activity
-            android:name=".WelcomeActivity"
+            android:name=".SplashActivity"
             android:exported="true">  <!-- Must be true for launcher activity -->
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -22,11 +25,15 @@
         </activity>
 
         <activity
-            android:name=".SignupActivity"
+            android:name=".WelcomeActivity"
             android:exported="false" />
 
         <activity
-            android:name=".SigninActivity"
+            android:name=".SignUpActivity"
+            android:exported="false" />
+
+        <activity
+            android:name=".SignInActivity"
             android:exported="false" />
 
     </application>
